Modify home page
Main section shows content based on the button pressed from the leftBar menu

--- a/client/src/sass/main.sass
+++ b/client/src/sass/main.sass
@@ -4,6 +4,9 @@
 
 @use "../components/Navbar/navbar"
 @use "../components/auth/LoginForm/loginform"
+@use "../components/LeftBar/leftbar"
+@use "../components/RightBar/rightbar"
+@use "../components/MainSection/mainsection"
 
 @use "../pages/Home/home"
 @use "../pages/Signin/signin"
