--- a/client/src/components/Navbar/_navbar.sass
+++ b/client/src/components/Navbar/_navbar.sass
@@ -14,6 +14,8 @@ nav
 
   ul
     display: flex
+    align-items: center
+    justify-content: center
     list-style: none
 
     li
@@ -26,3 +28,7 @@ nav
         font-size: 1rem
         color: white
         cursor: pointer
+      
+      img
+        border-radius: 50%
+        width: 2em
