--- a/client/src/components/Navbar/_navbar.sass
+++ b/client/src/components/Navbar/_navbar.sass
@@ -11,29 +11,12 @@ nav
     color: white
     text-decoration: none
     font-size: 1rem
-
-  // ul
-  //   display: flex
-  //   align-items: center
-  //   justify-content: center
-  //   list-style: none
-
-  //   li
-  //     padding: 0 8px
-  //     color: white
-
-
-  //     button
-  //       background-color: gray
-  //       font-size: 1rem
-  //       color: white
-  //       cursor: pointer
-      
+    
   .userProfile
     position: relative
     display: flex
     flex-direction: column
-    align-items: center
+    align-items: flex-end
 
     img
       border-radius: 50%
@@ -44,14 +27,22 @@ nav
 
     .userpopup
       position: absolute
-      top: 35px
       background-color: #dfcccc
-      padding: 5px
-      display: none
+      padding: 10px
+      top: 40px
+      opacity: 0
+      visibility: hidden
+      transition: all 0.1s ease-in-out 0.1s
+      list-style-type: none
+      
+      li
+        padding: 2px 5px
+        cursor: pointer
 
       button
         background-color: #dfcccc
 
     &:hover
       .userpopup
-        display: inline
+        visibility: visible
+        opacity: 1
