--- a/client/src/sass/main.sass
+++ b/client/src/sass/main.sass
@@ -7,6 +7,7 @@
 @use "../components/LeftBar/leftbar"
 @use "../components/RightBar/rightbar"
 @use "../components/MainSection/mainsection"
+@use "../components/Post/PostCard/postcard"
 
 @use "../pages/Home/home"
 @use "../pages/Signin/signin"
