--- a/client/src/components/Navbar/_navbar.sass
+++ b/client/src/components/Navbar/_navbar.sass
@@ -1,48 +1,52 @@
+@use "../../sass/abstracts/theme" as theme
+@use "../../sass/abstracts/mixins" as mixins
+
 nav
-  display: flex
-  flex-direction: row
-  background-color: gray
-  height: 1.5rem
-  align-items: center
-  padding: 2em
-  justify-content: space-between
-
-  .link
-    color: white
-    text-decoration: none
-    font-size: 1rem
-    
-  .userProfile
-    position: relative
+  @include mixins.themify(theme.$theme)
     display: flex
-    flex-direction: column
-    align-items: flex-end
+    flex-direction: row
+    background-color: mixins.themed("color-surface")
+    height: 1.5rem
+    align-items: center
+    padding: 2em
+    justify-content: space-between
 
-    img
-      border-radius: 50%
-      width: 2em
+    .link
+      color: mixins.themed("color-on-surface")
+      text-decoration: none
+      font-size: 1rem
+
+    .userProfile
+      position: relative
+      display: flex
+      flex-direction: column
+      align-items: flex-end
+
+      img
+        border-radius: 50%
+        width: 2em
+
+        &:hover
+          cursor: pointer
+
+      .userpopup
+        position: absolute
+        background-color: mixins.themed("color-surface-variant")
+        padding: 10px
+        top: 40px
+        opacity: 0
+        visibility: hidden
+        transition: all 0.1s ease-in-out 0.1s
+        list-style-type: none
+
+        li
+          padding: 2px 5px
+          cursor: pointer
+
+        span
+          color: mixins.themed("color-on-surface-variant")
 
       &:hover
-        cursor: pointer
-
-    .userpopup
-      position: absolute
-      background-color: #dfcccc
-      padding: 10px
-      top: 40px
-      opacity: 0
-      visibility: hidden
-      transition: all 0.1s ease-in-out 0.1s
-      list-style-type: none
-      
-      li
-        padding: 2px 5px
-        cursor: pointer
-
-      button
-        background-color: #dfcccc
-
-    &:hover
-      .userpopup
-        visibility: visible
-        opacity: 1
+        .userpopup
+          visibility: visible
+          opacity: 1
