--- a/client/src/pages/Home/_home.sass
+++ b/client/src/pages/Home/_home.sass
@@ -1,8 +1,13 @@
+@use "../../sass/abstracts/_mixins" as mixins
+@use "../../sass/abstracts/_theme" as theme
+
 .home
-  display: flex
-  flex-direction: row
-  column-gap: 350px
-  justify-content: space-around
-  align-items: flex-start
-  
-  margin: 20px 40px
+  @include mixins.themify(theme.$theme)
+    background-color: mixins.themed("color-background")
+    display: flex
+    flex-direction: row
+    column-gap: 350px
+    justify-content: space-around
+    align-items: flex-start
+    
+    padding: 20px 40px
