--- a/client/src/components/LeftBar/_leftbar.sass
+++ b/client/src/components/LeftBar/_leftbar.sass
@@ -1,7 +1,44 @@
-.leftBar
-  flex: 1
-  width: 100%
-  padding: 10px 5px
+@use "../../sass/abstracts/_mixins" as mixins
+@use "../../sass/abstracts/_theme" as theme
 
-  ul
-    list-style: none
+.leftBar
+
+  @include mixins.themify(theme.$theme)
+    flex: 1
+    width: 100%
+    padding: 0 10px
+    color: mixins.themed("color-on-background")
+
+    $left-spacing: 15px
+
+    ul
+      list-style: none
+
+      .divider
+        width: calc( 100% - $left-spacing )
+        height: 1px
+        background-color: mixins.themed("color-outline")
+        border-radius: 5px
+
+        margin-left: $left-spacing
+
+      .btnSectionList
+        padding: 20px 0
+
+        .btnSectionBtn
+          background-color: mixins.themed("color-surface")
+          color: mixins.themed("color-on-background")
+          border-radius: 7px
+
+          padding-left: 5px
+
+          width: 100%
+          display: flex
+
+          transition: background-color 200ms ease-in-out
+
+          &:hover
+            background-color: mixins.themed("color-surface-variant")
+
+          span
+            padding: 5px $left-spacing
