Style/theme: Change home page padding

--- a/client/src/pages/Home/_home.sass
+++ b/client/src/pages/Home/_home.sass
@@ -4,7 +4,7 @@
 .home
   @include mixins.themify(theme.$theme)
     background-color: mixins.themed("color-background")
-    padding: 20px 40px
+    padding: 30px 0
 
     display: flex
     flex-direction: row
