Change navbar background and border

--- a/client/src/components/Navbar/_navbar.sass
+++ b/client/src/components/Navbar/_navbar.sass
@@ -8,7 +8,8 @@ nav
     justify-content: space-between
     align-items: center
 
-    background-color: mixins.themed("color-surface")
+    background-color: mixins.themed("color-surface-variant")
+    border-bottom: 1px solid mixins.themed("color-outline")
     height: 1.5rem
     padding: 2em
 
