--- a/client/src/components/Navbar/_navbar.sass
+++ b/client/src/components/Navbar/_navbar.sass
@@ -39,7 +39,7 @@ nav
 
         width: 15vw
 
-        background-color: mixins.themed("color-surface-variant")
+        background-color: mixins.themed("color-surface")
         border: 1px solid mixins.themed("color-outline")
         border-radius: $border-radius
         padding: 10px
@@ -54,16 +54,18 @@ nav
           cursor: pointer
 
           button
-            background-color: mixins.themed("color-surface-variant")
+            background-color: mixins.themed("color-surface")
             color: mixins.themed("color-on-surface-variant")
             border-radius: $border-radius
             padding: 15px 10px
             width: 100%
-            transition: background-color 250ms ease-in-out
             display: flex
+            border: 1px solid rgba(255, 255, 255, 0)
+            transition: all 250ms ease-in-out
 
             &:hover
-              background-color: mixins.themed("color-surface")
+              border: 1px solid mixins.themed("color-outline")
+              background-color: mixins.themed("color-surface-variant")
 
       &:hover
         .userpopup
