--- a/client/src/components/Navbar/_navbar.sass
+++ b/client/src/components/Navbar/_navbar.sass
@@ -45,7 +45,7 @@ nav
         border-radius: $border-radius
         padding: 10px
         visibility: hidden
-        
+
         opacity: 0
         transition: all 0.1s ease-in-out 0.1s
         list-style-type: none
@@ -61,7 +61,8 @@ nav
             padding: 15px 10px
             margin-bottom: 2px
             width: 100%
-            display: flex
+            
+            text-align: start
             border: 1px solid rgba(255, 255, 255, 0)
             transition: all 250ms ease-in-out
 
@@ -71,8 +72,8 @@ nav
 
         .themeSelector
           .selected
-              border: 1px solid mixins.themed("color-outline")
-              background-color: mixins.themed("color-surface-variant")
+            border: 1px solid mixins.themed("color-outline")
+            background-color: mixins.themed("color-surface-variant")
 
       &:hover
         .userpopup
