Style/Theme: Start styling post card

--- a/client/src/components/MainSection/_mainsection.sass
+++ b/client/src/components/MainSection/_mainsection.sass
@@ -4,6 +4,6 @@
 .mainSection
   @include mixins.themify(theme.$theme)
   
-    background-color: mixins.themed("color-surface-variant")
+    // background-color: mixins.themed("color-surface-variant")
     width: 100%
     flex: 3
