--- a/client/src/components/Post/PostCard/_postcard.sass
+++ b/client/src/components/Post/PostCard/_postcard.sass
@@ -35,11 +35,14 @@
         display: flex
         flex-direction: column
         align-items: flex-start
+        gap: 3px
+
         .authorName
           font-weight: 900
 
         .postTime
-          font-size: 0.8em
+          font-size: 0.6em
+          font-family: 500
 
     .postImage
       width: $widthPercent
