Style/theme: Improve like/unlike animation

--- a/client/src/components/Post/PostCard/_postcard.sass
+++ b/client/src/components/Post/PostCard/_postcard.sass
@@ -99,11 +99,13 @@
               transform: scale(0.95)
             30%
               transform: scale(0.6)
+            50%
+              fill: red
             95%
               transform: scale(1.15)
-              fill: red
             100%
               transform: scale(0.95)
+              fill: red
 
         .noOfLikes
           font-size: 0.8em
