--- a/client/src/sass/abstracts/_fonts.sass
+++ b/client/src/sass/abstracts/_fonts.sass
@@ -2,8 +2,28 @@ $roboto-font-path: "../assets/fonts/Roboto"
 
 @font-face 
   font-family: "Roboto"
+  src: url("#{$roboto-font-path}/Roboto-Light.ttf")
+  font-weight: 200
+
+@font-face 
+  font-family: "Roboto"
   src: url("#{$roboto-font-path}/Roboto-Regular.ttf")
   font-weight: 400
+
+@font-face 
+  font-family: "Roboto"
+  src: url("#{$roboto-font-path}/Roboto-Medium.ttf")
+  font-weight: 500
+
+@font-face 
+  font-family: "Roboto"
+  src: url("#{$roboto-font-path}/Roboto-Bold.ttf")
+  font-weight: 700
+
+@font-face 
+  font-family: "Roboto"
+  src: url("#{$roboto-font-path}/Roboto-Black.ttf")
+  font-weight: 900
 
 *
   font-family: Roboto
