--- a/client/src/sass/main.sass
+++ b/client/src/sass/main.sass
@@ -2,7 +2,7 @@
 
 @use "./abstracts/_fonts"
 
-@use "components/buttons"
+@use "./components/buttons"
 
 @use "../components/auth/LoginForm/loginform"
 @use "../components/LeftBar/leftbar"
