--- a/client/src/pages/Home/_home.sass
+++ b/client/src/pages/Home/_home.sass
@@ -1,6 +1,12 @@
 @use "../../sass/abstracts/_mixins" as mixins
 @use "../../sass/abstracts/_theme" as theme
 
+.complete
+  @include mixins.themify(theme.$theme)
+    height: 100vh
+    background-color: mixins.themed("color-background")
+    // background-color: chocolate
+
 .home
   @include mixins.themify(theme.$theme)
     background-color: mixins.themed("color-background")
