Style/Theme: Start styling the create post page

--- a/client/src/sass/main.sass
+++ b/client/src/sass/main.sass
@@ -10,6 +10,7 @@
 @use "../components/Navbar/navbar"
 @use "../components/Post/AllPosts/allposts"
 @use "../components/Post/PostCard/postcard"
+@use "../components/Post/Create/createpost"
 @use "../components/Post/PostCard/Comments/_comments"
 @use "../components/RightBar/rightbar"
 
