--- a/client/src/components/auth/LoginForm/_loginform.sass
+++ b/client/src/components/auth/LoginForm/_loginform.sass
@@ -1,19 +1,23 @@
-.loginForm
-  padding: 30px
-  background-color: #bebebe
-  form
-    display: flex
-    flex-direction: column
-    input
-      padding: 10px
-      background-color: #ebebeb
-      margin-bottom: 10px
-      margin-right: 15px
-    button
-      width: 100px
+@use "../../../sass/abstracts/_mixins" as mixins
+@use "../../../sass/abstracts/_theme" as theme
 
-    margin-bottom: 20px
-  
-  .socialLogin
-    & *
-      margin-right: 10px
+.loginForm
+  @include mixins.themify(theme.$theme)
+    padding: 30px
+    background-color: mixins.themed("color-background")
+    form
+      display: flex
+      flex-direction: column
+      input
+        padding: 10px
+        background-color: #ebebeb
+        margin-bottom: 10px
+        margin-right: 15px
+      button
+        width: 100px
+
+      margin-bottom: 20px
+    
+    .socialLogin
+      & *
+        margin-right: 10px
